# Image-Compression

./: .gitignore  CMakeLists.txt  ClassDiagram.txt  README.md
.github/workflows/: CI.yml
src/: BaseCompressedImageHolder.h  BaseStoreData.h  ComplexRowColumnValue.cpp  CompressionLevel.h  Compressor.cpp  Compressor.h  DCTCompression.cpp  DFT.cpp  DFT.h  ICompressionStrategy.h  Image.cpp  Image.h  RunLengthEnoding.cpp  RunLengthEnoding.h  SparseRepresentation.cpp  SparseRepresentation.h  StoringData.cpp  StoringData.h  main.cpp
src/API/: ImageCompressionAPI.cpp  ImageCompressionAPI.h
src/DCT/: CompressedDCTImageHolder.cpp  CompressedDCTImageHolder.h  CompressedImageHolder.cpp  CompressedImageHolder.h  CompressionLevel.h  DCT.cpp  DCT.h  DCTCompression.cpp  DCTCompression.h  DCTEncoder.cpp  DCTEncoder.h  DCTEncoding.cpp  DCTEncoding.h  DCTTransformationHandler.cpp  DCTTransformationHandler.h  ImageChopper.cpp  ImageChopper.h  QuantizationTable.cpp  QuantizationTable.h  StoreDCTData.cpp  StoreDCTData.h  TwoDimDCT.cpp  TwoDimDCT.h  ZigzagDCTcoefficientsOrder.cpp  ZigzagDCTcoefficientsOrder.h
src/DFT/: ComplexRowColumnValue.h  CompressedDFTImageHolder.cpp  CompressedDFTImageHolder.h  Compressor.cpp  Compressor.h  DFT.cpp  DFT.h  DFTCompression.cpp  DFTCompression.h  DFTCompressor.cpp  DFTCompressor.h  SparseRepresentation.cpp  SparseRepresentation.h  StoreDFTData.cpp  StoreDFTData.h  StoringData.cpp  StoringData.h
tests/: test_Compressor.cpp  test_DCT.cpp  test_DCTCompression.cpp  test_DCTEncoder.cpp  test_DCTTransformationHandler.cpp  test_DFT.cpp  test_Image.cpp  test_ImageChopper.cpp  test_ImageCompressionAPI.cpp  test_RunLengthEnoding.cpp  test_SparseRepresentation.cpp  test_TwoDimDCT.cpp  test_ZigzagDCTcoefficientsOrder.cpp  test_main.cpp
